--- a/rc-switch-server/pom.xml
+++ b/rc-switch-server/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <java.version>1.8</java.version>
         <jersey.version>2.24.1</jersey.version>
+        <jetty.version>9.4.5.v20170502</jetty.version>
         <slf4j.version>1.7.21</slf4j.version>
         <jersey.config.test.container.port>8080</jersey.config.test.container.port>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,6 +40,11 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -94,7 +100,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.3.14.v20161028</version>
+                <version>${jetty.version}</version>
                 <configuration>
                     <scanIntervalSeconds>5</scanIntervalSeconds>
                     <stopPort>9999</stopPort>
