--- a/rc-switch-server/src/main/webapp/WEB-INF/web.xml
+++ b/rc-switch-server/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,17 @@ License along with this program. If not, see &lt;http://www.gnu.org/licenses/>.
         <servlet-name>rcSwitch REST Service</servlet-name>
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>cross-origin</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+        <init-param>
+            <param-name>allowedMethods</param-name>
+            <param-value>GET,POST,DELETE,PUT,HEAD,OPTIONS</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/api/*</url-pattern>
+    </filter-mapping>
 </web-app>
