--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 *.jar
 *.war
 *.ear
-*.zip
 *.tar.gz
 *.rar
 
@@ -23,4 +22,6 @@ hs_err_pid*
 /rc-switch-server/target/
 **/nb-configuration.xml
 /webapp-example-solution/solution1/
-/webapp-example-solution/password.txt
+/webapp-example-solution/solution2/
+/webapp-example-solution/password*.txt
+/webapp-template/nbproject/private/
